--- a/frontend/includes/header.html
+++ b/frontend/includes/header.html
@@ -1,17 +1,17 @@
 <header class="container-fluid ">
     <div class="d-flex justify-content-between align-items-center">
-        <a href="/frontend/pages/home.html" class="d-block">
+        <a href="/home" class="d-block">
             <img src="/frontend/assets/img/Logo.jpg" alt="Logo" class="img-fluid">
         </a>
 
         <div class="d-flex align-items-center gap-4">
-            <a href="/frontend/pages/Emergencia/vistaEmergenciaActiva.html" class="d-flex align-items-center gap-2 header-user text-decoration-none">
+            <a href="/emergencias/activas" class="d-flex align-items-center gap-2 header-user text-decoration-none">
                 <i class="bi bi-exclamation-triangle-fill fs-4 text-white"></i>
             </a>
             
             <span class="header-text">Teruel. SPEIS</span>
 
-            <a href="/frontend/pages/AreaPersonal/vistaAreaPersonal.html" class="d-flex align-items-center gap-2 header-user text-decoration-none">
+            <a href="/perfil" class="d-flex align-items-center gap-2 header-user text-decoration-none">
                 <i class="bi bi-person-circle fs-4 text-white"></i>
                 <span>USUARIO</span>
             </a>
