Añadido al sidebar

--- a/frontend/includes/sidebar.html
+++ b/frontend/includes/sidebar.html
@@ -206,7 +206,7 @@
                             <i class="bi bi-people text-secondary me-2"></i>
                             <span>Usuarios</span>
                         </a>
-                        <a href="#" class="nav-link link-dark d-flex align-items-center p-2 rounded">
+                        <a href="/frontend/pages/Rol/vistaRol.html" class="nav-link link-dark d-flex align-items-center p-2 rounded">
                             <i class="bi bi-person-badge text-secondary me-2"></i>
                             <span>Cargos</span>
                         </a>
