--- a/frontend/includes/sidebar.html
+++ b/frontend/includes/sidebar.html
@@ -84,7 +84,7 @@
                         </a>
                         <a href="/frontend/pages/TurnoRefuerzo/vistaRefuerzo.html"
                             class="nav-link link-dark d-flex align-items-center p-2 rounded">
-                            <i class="bi bi-person-raised-hand text-info me-2"></i>
+                            <i class="bi bi-calendar2-plus text-info me-2"></i>
                             <span>Turno Refuerzo</span>
                         </a>
 
@@ -129,6 +129,11 @@
                             class="nav-link link-dark d-flex align-items-center p-2 rounded">
                             <i class="bi bi-credit-card text-info me-2"></i>
                             <span>Carnets</span>
+                        </a>
+                        <a href="/frontend/pages/Merito/vistaMerito.html"
+                            class="nav-link link-dark d-flex align-items-center p-2 rounded">
+                            <i class="bi bi-star text-info me-2"></i>
+                            <span>Meritos</span>
                         </a>
                         <a href="/frontend/pages/Permiso/vistaPermiso.html"
                             class="nav-link link-dark d-flex align-items-center p-2 rounded">
